fix code color contrast

--- a/docs/_sass/_bootstrap_variables.scss
+++ b/docs/_sass/_bootstrap_variables.scss
@@ -5,7 +5,7 @@ $white: #fff;
 $primary: #39989F;
 $blue: #0c5fdc;
 $blue-x: #c2e5e6ff;
-$red: #d63936;
+$red: #d13431;
 $light: #f5f5f5;
 $dark: #175a5f;
 
@@ -39,6 +39,9 @@ $btn-border-radius-sm: $border-radius;
 // Links
 $link-color: $blue;
 $link-decoration: underline;
+
+// Code
+$code-color: $red;
 
 // Font changes
 $body-color: $dark;
